--- a/source/integrate/index.html.slim
+++ b/source/integrate/index.html.slim
@@ -131,8 +131,8 @@ section.section-article--med.strip.strip-greens
     = partial "partials/content/stats-integration"
 
 section.section-article.bg-gray-3 id=current_page.data.subnav[2].slug data-magellan-target=current_page.data.subnav[2].slug
-  .row.group
-    .columns.small-12.medium-6.large-8
+  .row.group.align-center
+    .columns.small-12.medium-12.large-10
       .row
         .columns.small-12.large-8
           h3.headline-3.text-bold More than just an API
@@ -161,13 +161,16 @@ section.section-article.bg-gray-3 id=current_page.data.subnav[2].slug data-magel
           p The hard work to ensuring cloud-based infrastructure is highly available 24/7 is done for you.
         .column
           h4.headline-5 Open source transformations
-          p You own your transformations because we use open source Mirth as the interface engine.
+          p Manage your own transformations with our optional open source Mirth interface engine.
+        .column
+          h4.headline-5 Push & Pull
+          p You need to both read and write when integrating with EHRs — Datica Integrate helps you do that.
       .row
         .columns.small-12
           p.lead Don't get caught with infrastructure gotchas as you go from zero-to-one or if you are preparing to scale to hundreds of integrations.
           = partial "partials/snippets/button", :locals => { :label => "Scale with Datica Integrate", :url => "##{current_page.data.subnav.last.slug}", :button_classes => "button button--light", :icon => "icon-chevron-down" }
 
-    .columns.small-12.medium-6.large-4
+/    .columns.small-12.medium-6.large-4
       .card.bg-gray-10.card-section
         h3.headline-4.text-light <strong>Full-Stack</strong> Data Integration
         p The mature integration stack considers HIPAA compliance, data security, redundant backups, and no reliance on black box proprietary APIs as core ingredients to a successful integration strategy.
