--- a/source/partials/content/_cta-section-promo.slim
+++ b/source/partials/content/_cta-section-promo.slim
@@ -6,4 +6,4 @@
   .columns.small-12.medium-8.large-8.xlarge-7
     aside
       a href=entry.cta_url title=entry.cta_label
-        img.lozad alt=entry.cta_label data-src="#{entry.cta_image.url}?w=1000" src=loader_rect /
+        img.lozad alt=entry.cta_label data-src="#{entry.cta_image.url}?w=1400&fl=progressive" src=loader_rect /
