--- a/source/cloud-compliance/index.html.slim
+++ b/source/cloud-compliance/index.html.slim
@@ -30,13 +30,13 @@ section#top.show-for-large.section-article.pad-no-bottom.bg-gray-3.container-ima
   .row.align-right.align-middle
     .columns.small-12.medium-6
       h1.headline-1.text-bold.text-shadow.group--2x Can your business pass a HITRUST assessment?
-      .strip-bright
+      .strip.strip-ccms
       .bg-white.pad--lg.drop.pull-down
         h2.headline-3.text-bold With CCMS, the answer is yes.
         p.lead <strong>Get back to solving problems for healthcare.</strong> Let Datica take on the burden of compliance. We're the experts at understanding the exact policies and procedures required to turn HIPAA-eligible services on the public cloud into architectures that can pass a HITRUST CSF assessment. That expertise is passed on to you through our products and rock-solid BAA.
-        = partial "partials/snippets/button", :locals => { :label => "Get started", :url => "/cloud-compliance-management-system#cta", :button_classes => "button nomargin success", :data_track_group => "compliance", :item_id => "get-ccms-desktop", :icon => "icon-chevron-right", :icon_align => "right" }
+        = partial "partials/snippets/button", :locals => { :label => "Get started", :url => "/cloud-compliance-management-system#cta", :button_classes => "button nomargin strip-ccms", :data_track_group => "compliance", :item_id => "get-ccms-desktop", :icon => "icon-chevron-right", :icon_align => "right" }
 
-.strip-bright
+.strip.strip-ccms
 
 section#compliance-products.section-article.bg-gray-3.container-image-fill.lozad data-background-image="https://images.ctfassets.net/189dvqdsjh46/6OKt8JnNqo86wQIgOqiGcs/232794aa517af9870472dd34726ef595/hex-pattern-dark-bg.svg"
   .row.align-center
