--- a/source/integrate/index.html.slim
+++ b/source/integrate/index.html.slim
@@ -69,7 +69,7 @@ section.masthead.bg-dark.bg-greens-grad.product-integrate.relative id="top"
             h1.headline-1.text-light.margin-bottom-small Datica <strong>Integrate</strong>
             p.headline-3.group Activate your digital health product with health data in any format, from any EHR.
             p.lead <strong>Datica Integrate</strong> helps you implement effortlessly, innovate brilliantly, deliver value swiftly and scale confidently.
-            = partial "partials/snippets/button", :locals => { :label => "Start your integration project", :url => "##{current_page.data.subnav.last.slug}", :button_classes => "button button--light nomargin step-2", :data_track_group => "compliance", :item_id => "get-ccms-mobile", :icon => "icon-chevron-down", :icon_align => "right", :expand => "false" }
+            = partial "partials/snippets/button", :locals => { :label => "Start your integration project", :url => "##{current_page.data.subnav.last.slug}", :button_classes => "button button--light nomargin step-2", :data_track_group => "integration", :item_id => "get-integrate-banner", :icon => "icon-chevron-down", :icon_align => "right", :expand => "false" }
   .art
     = partial "partials/snippets/nav-sub-product", :locals => { :parent_url => "/ehr-integration/" }
     = inline_svg("products-cards-color", class: "z-5 art-accent step-1")
