WIP work CCMS > Monitor

--- a/source/monitor/index.html.slim
+++ b/source/monitor/index.html.slim
@@ -95,8 +95,15 @@ section.section-article.bg-white
   .row.align-center.align-middle
     .columns.small-12.medium-10.large-5
       h2.headline-4.text-strong.color-ccms-dark Datica solves compliance in a post-cloud world
-      p The Cloud Compliance Management System (CCMS) is built to manage compliance requirements across popular HIPAA-eligible cloud provider services. Cloud-native environments tend towards a constellation of managed services and microservices, but they have a compliance problem. <strong>Datica CCMS is the solution.</strong>
-      p The CCMS is an easy-to-use SaaS tool that uses modern APIs to monitor and assess the configuration state of your favorite cloud services.
+      p Modern cloud environments are complex, including a constellation of managed services and microservices. Continual monitoring of HIPAA compliance in these cloud configurations is a challenge for developers. <strong>Datica Monitor</strong> is the solution.
+      p Datica Monitor is an easy-to-use SaaS tool that takes advantage of cloud provider APIs to monitor and assess the configuration state of your cloud services, ensuring you have real-time mappings to regimes like HIPAA, HITRUST, and more.
+      h4.headline-5 Features:
+      ul
+        li Continuous Monitoring
+        li Attestation Tools
+        li Risk and Incident Details
+        li Remediation Guidance
+        li Historical Reporting
     .columns.small-12.medium-10.large-7
       = Kramdown::Document.new(data.site.videos['1fMsxIMgXvZS6x0mowu1Nk'].custom_form).to_html
 
