Changing urls to /monitor

--- a/source/_compliant-platform-as-a-service/_index.html.slim
+++ b/source/_compliant-platform-as-a-service/_index.html.slim
@@ -41,7 +41,7 @@ section.masthead.bg-dark.bg-blue-green-grad.product-cpaas.relative
         p Do you need compliant infrastructure, with the power of Kubernetes orchestration? 
         = partial "partials/snippets/button", :locals => { :label => "Explore CKS", :url => "/compliant-kubernetes-service", :button_classes => "button button--light group step-2", :data_track_group => "compliance", :item_id => "get-cks", :icon => "icon-chevron-right", :icon_align => "right", :expand => "false" }
         p Looking for complete cloud compliance, and real-time compliance monitoring?
-        = partial "partials/snippets/button", :locals => { :label => "Explore CCMS", :url => "/cloud-compliance-management-system", :button_classes => "button button--light step-2", :data_track_group => "compliance", :item_id => "get-ccms", :icon => "icon-chevron-right", :icon_align => "right", :expand => "false" }
+        = partial "partials/snippets/button", :locals => { :label => "Explore CCMS", :url => "/monitor", :button_classes => "button button--light step-2", :data_track_group => "compliance", :item_id => "get-ccms", :icon => "icon-chevron-right", :icon_align => "right", :expand => "false" }
   .art
     / = partial "partials/snippets/nav-sub-product", :locals => { :parent_url => "/cloud-compliance/" }
     = inline_svg("products-discs-color", class: "z-5 art-accent step-1")
