--- a/source/about/_index-old.html.erb
+++ b/source/about/_index-old.html.erb
@@ -172,7 +172,7 @@ layout: company
                     <div class="date"><span>October 2018</span></div>
                     <span class="dot"></span>
                     <div class="content">
-                        Datica announces the <a href="/cloud-compliance-management-system" title="CCMS">Cloud Compliance Management System</a> (CCMS), giving customers constant visibility of the precise state of their cloud environments.
+                        Datica announces the <a href="/monitor" title="CCMS">Cloud Compliance Management System</a> (CCMS), giving customers constant visibility of the precise state of their cloud environments.
                     </div>
                 </div>
             </div>
