--- a/source/about/index.html.slim
+++ b/source/about/index.html.slim
@@ -52,7 +52,7 @@ timeline_company:
     body: 'The [Complete Cloud Compliance](https://completecloudcompliance.com "get the book") book is published.'
   -
     date: 'October 2018'
-    body: 'Datica announces the [Cloud Compliance Management System](/cloud-compliance-management-system "CCMS") (CCMS), giving customers constant visibility of the precise state of their cloud environments.'
+    body: 'Datica announces the [Cloud Compliance Management System](/monitor "CCMS") (CCMS), giving customers constant visibility of the precise state of their cloud environments.'
   -
     date: 'June 2019'
     body: '<p><img class="logo-size--medium" src="https://images.ctfassets.net/189dvqdsjh46/6trTrrJ1p64UgkmGIiII0y/e223aba28cde65a887468fdc9780489e/logo.svg?fm=png&fit=scale&h=80" alt="Datica" /> + <img class="logo-size--small" src="https://images.ctfassets.net/189dvqdsjh46/5TO6aUEyrwX913VqHfwYNa/4e1d3e281fe5d003fc50f55b66482638/sansoro-logo-horiz.svg?fm=png&fit=scale&h=80" alt="Sansoro" /></p>
