--- a/source/monitor/survey.html.slim
+++ b/source/monitor/survey.html.slim
@@ -42,7 +42,7 @@ scss:
       .columns.small-12.large-6.text-center.group
         = inline_svg("icon-ccms-mag", class: "icon-size--large")
         h2.headline-5.spaced-out
-          a href="/cloud-compliance-management-system/" title="Back to Datica CCMS" Datica CCMS
+          a href="/monitor/" title="Back to Datica CCMS" Datica CCMS
     .row.align-center
       .columns.small-12.medium-10.large-8
         .group.text-center
