--- a/source/pricing/index.html.slim
+++ b/source/pricing/index.html.slim
@@ -64,7 +64,7 @@ scss:
             /= inline_svg("ccms-logo-dark", class: "icon-size--large product-icon")
           .columns
             h2.headline-4.margin-bottom-small
-              a href="/cloud-compliance-management-system" title="Cloud Compliance Management System" Cloud Compliance Management System
+              a href="/monitor" title="Cloud Compliance Management System" Cloud Compliance Management System
             h4.headline-6.text--gray-4.nomargin Resource Subscription
             p Datica CCMS is $100/mo. per Service type + $1/mo. per instance.
             p
