--- a/source/customers/index.html.slim
+++ b/source/customers/index.html.slim
@@ -95,7 +95,7 @@ section#products.section-article.bg-gray-3.container-image-fill.lozad data-backg
         .columns.shrink
           = partial "partials/snippets/button", :locals => { :label => "Learn more about HITRUST compliance", :url => "/discover/hitrust/", :button_classes => "button hollow-inverted" }
         .columns.shrink
-          = partial "partials/snippets/button", :locals => { :label => "Get started with CCMS", :url => "/cloud-compliance-management-system/", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "gray-8", :icon_align => "right", :item_id => "page-bottom", :data_track_group => "ccms" }
+          = partial "partials/snippets/button", :locals => { :label => "Get started with CCMS", :url => "/monitor/", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "gray-8", :icon_align => "right", :item_id => "page-bottom", :data_track_group => "ccms" }
     .blob-color.blob-ccms.z-auto data-glow="false"
 
 / ==== this version uses cards & mixed interstitals ===
